@@ -2,7 +2,6 @@ import { defaults as defaultInteractions } from 'ol/interaction'
 import selectInteraction from './select-interaction'
 import translateInteraction from './translate-transaction'
 import modifyInteraction from './modify-interaction'
-import snapInteraction from './snap-interaction'
 import boxselectInteraction from './boxselect-interaction'
 import drawInteraction from './draw-interaction'
 
@@ -21,13 +20,12 @@ export default options => {
   const select = selectInteraction(options)
   const modify = modifyInteraction(options)
   const translate = translateInteraction(options, select)
-  const snap = snapInteraction(options)
   const boxselect = boxselectInteraction(options)
 
   // Draw interaction is dynamically added to map as required.
   drawInteraction(options)
 
   return defaultInteractions({ doubleClickZoom: false }).extend(
-    [select, translate, modify, snap, boxselect]
+    [select, translate, modify, boxselect]
   )
 }
