@@ -1,4 +1,5 @@
 0.0.1
+* Removed snap interaction due to update issue.
 * Boundaries/Echelons are no displayed.
 * Fix: FTS issue with leading numbers in filter.
 * Highlight layers/features; Mouse down/up on scope tags. Supports multiselect.
